--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "sv-demo-night",
   "version": "1.0.0",
+  "homepage": "https://bytenite2.github.io/sv-demo-night",
   "description": "A simple UI app for generating images based on user prompts using ByteNite.",
   "main": "src/index.tsx",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -18,7 +21,8 @@
   "devDependencies": {
     "typescript": "^4.1.2",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.2.3"
   },
   "keywords": [
     "image generation",
